--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class="cards-container">
+        <div class="cards-container-desktop hidden-mobile">
             <div class="card-row">
                 <div class="card" id="Joueur1">
                     <div class="card-face card-front">
                         <p class="front-text">1 Joueur</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">59€</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">59 €</p>
+                        <a href="https://book.stripe.com/3csdTf0x2bJebioaEP" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -27,10 +27,10 @@
                         <p class="front-text">2 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">42€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">42€ / Personne</p>
+                        <a href="https://book.stripe.com/14k9CZ1B6bJefyEbIU" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -40,10 +40,10 @@
                         <p class="front-text">3 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">35€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">35€ / Personne</p>
+                        <a href="https://book.stripe.com/9AQg1ndjOaFa1HO6oB" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -53,10 +53,10 @@
                         <p class="front-text">4 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">29€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">29€ / Personne</p>
+                        <a href="https://book.stripe.com/cN2aH30x228Eaek9AO" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -68,10 +68,10 @@
                         <p class="front-text">5 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">27€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">27€ / Personne</p>
+                        <a href="https://book.stripe.com/9AQ02p2FaaFa4U0cN1" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -81,10 +81,10 @@
                         <p class="front-text">6 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">24€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">24€ / Personne</p>
+                        <a href="https://book.stripe.com/4gw2axgw07sYgCI14k" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -94,10 +94,10 @@
                         <p class="front-text">7 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">21€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">21€ / Personne</p>
+                        <a href="https://book.stripe.com/cN2dTfa7CaFaeuA28p" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
@@ -107,13 +107,103 @@
                         <p class="front-text">8 Joueurs</p>
                     </div>
                     <div class="card-face card-back">
-                        <p class="back-text">19€/Personne</p>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <p class="back-text">19€ / Personne</p>
+                        <a href="https://book.stripe.com/14keXj5Rm00weuA3cu" target="_blank">
                             <button type="button" class="stripe-button">
-                                Stripe
+                                Pré-réservez
                             </button>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards-container-mobile hidden-desktop">
+            <div class="card" id="Joueur1-mobile">
+                <div class="card-face">
+                    <p class="front-text">1 Joueur</p>
+                    <p class="back-text">59 €</p>
+                    <a href="https://book.stripe.com/3csdTf0x2bJebioaEP" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur2-mobile">
+                <div class="card-face">
+                    <p class="front-text">2 Joueurs</p>
+                    <p class="back-text">42€ / Personne</p>
+                    <a href="https://book.stripe.com/14k9CZ1B6bJefyEbIU" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur3-mobile">
+                <div class="card-face">
+                    <p class="front-text">3 Joueurs</p>
+                    <p class="back-text">35€ / Personne</p>
+                    <a href="https://book.stripe.com/9AQg1ndjOaFa1HO6oB" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur4-mobile">
+                <div class="card-face">
+                    <p class="front-text">4 Joueurs</p>
+                    <p class="back-text">29€ / Personne</p>
+                    <a href="https://book.stripe.com/cN2aH30x228Eaek9AO" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur5-mobile">
+                <div class="card-face">
+                    <p class="front-text">5 Joueurs</p>
+                    <p class="back-text">27€ / Personne</p>
+                    <a href="https://book.stripe.com/9AQ02p2FaaFa4U0cN1" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur6-mobile">
+                <div class="card-face">
+                    <p class="front-text">6 Joueurs</p>
+                    <p class="back-text">24€ / Personne</p>
+                    <a href="https://book.stripe.com/4gw2axgw07sYgCI14k" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur7-mobile">
+                <div class="card-face">
+                    <p class="front-text">7 Joueurs</p>
+                    <p class="back-text">21€ / Personne</p>
+                    <a href="https://book.stripe.com/cN2dTfa7CaFaeuA28p" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="card" id="Joueur8-mobile">
+                <div class="card-face">
+                    <p class="front-text">8 Joueurs</p>
+                    <p class="back-text">19€ / Personne</p>
+                    <a href="https://book.stripe.com/14keXj5Rm00weuA3cu" target="_blank">
+                        <button type="button" class="stripe-button">
+                            Pré-réservez
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
