Fix flip problem

--- a/index.html
+++ b/index.html
@@ -9,110 +9,126 @@
     <body>
         <div class="cards-container-desktop hidden-mobile">
             <div class="card-row">
-                <div class="card" id="Joueur1">
-                    <div class="card-face card-front">
-                        <p class="front-text">1 Joueur</p>
-                    </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">59 €</p>
-                        <a href="https://book.stripe.com/3csdTf0x2bJebioaEP" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="card" id="Joueur2">
-                    <div class="card-face card-front">
-                        <p class="front-text">2 Joueurs</p>
-                    </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">42€ / Personne</p>
-                        <a href="https://book.stripe.com/14k9CZ1B6bJefyEbIU" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur1">
+                        <div class="card-face card-front">
+                            <p class="front-text">1 Joueur</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">59 €</p>
+                            <a href="https://book.stripe.com/3csdTf0x2bJebioaEP" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="card" id="Joueur3">
-                    <div class="card-face card-front">
-                        <p class="front-text">3 Joueurs</p>
-                    </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">35€ / Personne</p>
-                        <a href="https://book.stripe.com/9AQg1ndjOaFa1HO6oB" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur2">
+                        <div class="card-face card-front">
+                            <p class="front-text">2 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">42€ / Personne</p>
+                            <a href="https://book.stripe.com/14k9CZ1B6bJefyEbIU" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="card" id="Joueur4">
-                    <div class="card-face card-front">
-                        <p class="front-text">4 Joueurs</p>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur3">
+                        <div class="card-face card-front">
+                            <p class="front-text">3 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">35€ / Personne</p>
+                            <a href="https://book.stripe.com/9AQg1ndjOaFa1HO6oB" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">29€ / Personne</p>
-                        <a href="https://book.stripe.com/cN2aH30x228Eaek9AO" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
+                </div>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur4">
+                        <div class="card-face card-front">
+                            <p class="front-text">4 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">29€ / Personne</p>
+                            <a href="https://book.stripe.com/cN2aH30x228Eaek9AO" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="card-row">
-                <div class="card" id="Joueur5">
-                    <div class="card-face card-front">
-                        <p class="front-text">5 Joueurs</p>
-                    </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">27€ / Personne</p>
-                        <a href="https://book.stripe.com/9AQ02p2FaaFa4U0cN1" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="card" id="Joueur6">
-                    <div class="card-face card-front">
-                        <p class="front-text">6 Joueurs</p>
-                    </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">24€ / Personne</p>
-                        <a href="https://book.stripe.com/4gw2axgw07sYgCI14k" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur5">
+                        <div class="card-face card-front">
+                            <p class="front-text">5 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">27€ / Personne</p>
+                            <a href="https://book.stripe.com/9AQ02p2FaaFa4U0cN1" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="card" id="Joueur7">
-                    <div class="card-face card-front">
-                        <p class="front-text">7 Joueurs</p>
-                    </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">21€ / Personne</p>
-                        <a href="https://book.stripe.com/cN2dTfa7CaFaeuA28p" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur6">
+                        <div class="card-face card-front">
+                            <p class="front-text">6 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">24€ / Personne</p>
+                            <a href="https://book.stripe.com/4gw2axgw07sYgCI14k" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="card" id="Joueur8">
-                    <div class="card-face card-front">
-                        <p class="front-text">8 Joueurs</p>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur7">
+                        <div class="card-face card-front">
+                            <p class="front-text">7 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">21€ / Personne</p>
+                            <a href="https://book.stripe.com/cN2dTfa7CaFaeuA28p" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="card-face card-back">
-                        <p class="back-text">19€ / Personne</p>
-                        <a href="https://book.stripe.com/14keXj5Rm00weuA3cu" target="_blank">
-                            <button type="button" class="stripe-button">
-                                Pré-réservez
-                            </button>
-                        </a>
+                </div>
+                <div class="js-hover-flip">
+                    <div class="card" id="Joueur8">
+                        <div class="card-face card-front">
+                            <p class="front-text">8 Joueurs</p>
+                        </div>
+                        <div class="card-face card-back">
+                            <p class="back-text">19€ / Personne</p>
+                            <a href="https://book.stripe.com/14keXj5Rm00weuA3cu" target="_blank">
+                                <button type="button" class="stripe-button">
+                                    Pré-réservez
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
